[gd_scene load_steps=3 format=3 uid="uid://dcclxbjbmuore"]

[ext_resource type="Script" path="res://Scenes/Level/Entity/entity.gd" id="1_4x60i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3ebi"]
bg_color = Color(0.180392, 0.513726, 1, 1)
corner_radius_top_left = 1000
corner_radius_top_right = 1000
corner_radius_bottom_right = 1000
corner_radius_bottom_left = 1000

[node name="Entity" type="CharacterBody2D"]
process_mode = 1
script = ExtResource("1_4x60i")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(40, 4)
offset_right = 40.0
offset_bottom = 4.0
scale = Vector2(0.5, 0.5)
theme_override_styles/fill = SubResource("StyleBoxFlat_e3ebi")
rounded = true
show_percentage = false

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]

[node name="DisableTimer" type="Timer" parent="HurtBox"]
wait_time = 0.5

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurted"]
[connection signal="timeout" from="HurtBox/DisableTimer" to="." method="_on_disable_hurt_box_timeout"]
